# gramma-rs-usage

./: .gitignore  .gitmodules  Cargo.toml  Readme.md  build.rs
examples/calc/: Cargo.toml
examples/calc/src/: calc.grs  calc.rs  grammar.grs  grammar.rs  main.rs
examples/prefix-expr/: Cargo.toml
examples/prefix-expr/src/: lib.rs  main.rs
examples/prefix-expr/src/ast/: tree.rs
examples/prefix-expr/src/grammar/: mod.rs  parser.grs  parser.lalrpop  parser.rs
examples/prefix-expr/src/printer/: format.rs
examples/simple-line-grammar/: Cargo.toml
examples/simple-line-grammar/src/: grammar.grs  grammar.rs  main.rs
examples/small-regex/: Cargo.toml
examples/small-regex/src/: grammar.grs  grammar.rs  graph_printer.rs  lexer.rs  lib.rs  main.rs  parser.rs  tree.rs
